@@ -8,50 +8,39 @@ import lombok.AllArgsConstructor;
 import lombok.NoArgsConstructor;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-
-import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.List;
+import org.json.JSONArray;
+import org.json.JSONObject;
+
+import java.io.IOException;
 import java.util.concurrent.ThreadLocalRandom;
 
 @Data
 @AllArgsConstructor
-@NoArgsConstructor
 public class CreateUserObject {
 
     private static final Log log = LogFactory.getLog(CreateUserObject.class);
-    private String job;
-    private String name;
-    private Integer id;
-    private String createdAt;
 
-    public static List<CreateUserObject> getObjectsFromJson(String filePath) {
-        ObjectMapper objectMapper = new ObjectMapper();
-        try {
-            String jsonContent = new String(Files.readAllBytes(Paths.get(filePath)));
-            return objectMapper.readValue(jsonContent, new TypeReference<List<CreateUserObject>>() {
-            });
-        } catch (IOException e) {
-            log.info(e.getStackTrace());
-            return null;
-        }
+    public static JSONArray getObjectsFromJson() throws IOException {
+        String jsonString = Files.readString(Paths.get(Constants.JSON_FILE_PATH), StandardCharsets.UTF_8);
+
+        return new JSONArray(jsonString);
     }
 
-    public static CreateUserObject getObjectFromJson(String filePath) {
-        ObjectMapper objectMapper = new ObjectMapper();
-        try {
-            String jsonContent = new String(Files.readAllBytes(Paths.get(filePath)));
-            return objectMapper.readValue(jsonContent, CreateUserObject.class);
-        } catch (IOException e) {
-            log.info(e.getStackTrace());
-            return null;
-        }
+    public static JSONObject getRandomObjectFromJson() throws IOException {
+        ThreadLocalRandom random = ThreadLocalRandom.current();
+        JSONArray array = getObjectsFromJson();
+
+        return array.getJSONObject(random.nextInt(array.length()));
     }
-//
-//    public String getJsonFromObject() throws JsonProcessingException {
-//        ObjectMapper objectMapper = new ObjectMapper();
-//        return objectMapper.writeValueAsString(this);
-//    }
+
+    public String getJsonFromObject() throws JsonProcessingException {
+        ObjectMapper objectMapper = new ObjectMapper();
+        return objectMapper.writeValueAsString(this);
+    }
 
 }
